Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8853

lctl nodemap_info doesn't actually display param values

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      When nodemap_info was moved over to using param_display, some of the functionality got lost. It now only lists the parameters instead of displaying them.

            kit.westneat Kit Westneat (Inactive)
            kit.westneat Kit Westneat (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: