LU-8853 nodemap: fix up lctl nodemap_info

When nodemap_info was moved over to using param_display, some of the
functionality got lost. This patch modifies nodemap_info to use
GET_PARAM instead of LIST_PARAM when a nodemap is specified.

Signed-off-by: Kit Westneat <kit.westneat@gmail.com>
Change-Id: I85df8e1cb43e002f4a112b9b671725862210dbec
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/23868
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Vitaliy Kuznetsov <vkuznetsov@ddn.com>